system/network-policies/host-firewall.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: homelab-host-firewall
  annotations:
    homelab.security/audit-reviewed: "2026-06-14"
spec:
  nodeSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: hubble-relay
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "10250"
              protocol: TCP
            - port: "9962"
              protocol: TCP
            - port: "9963"
              protocol: TCP
            - port: "9964"
              protocol: TCP
            - port: "9965"
              protocol: TCP
            - port: "9966"
              protocol: TCP
    - fromCIDR:
        - 192.168.100.0/24
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
            - port: "8123"
              protocol: TCP
            - port: "1900"
              protocol: UDP
            - port: "5353"
              protocol: UDP
    - fromCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "30000"
              protocol: TCP
